# cppCoC

./: .gitignore  CMakeLists.txt
models/player/: CMakeLists.txt  conanfile.txt
models/player/include/player/: player.hpp
models/player/src/: player.cpp
models/player/tests/: CMakeLists.txt  player_test.cpp  test_runner.cpp
models/player/tests/resource/: player.json  player_alternative.json
